// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`argv config has development options and defaults 1`] = `
Array [
  "m",
  Object {
    "alias": "use-middleware",
    "describe": "Apply a custom middleware configuration for one-app-dev-proxy",
    "type": "boolean",
  },
]
`;

exports[`argv config has development options and defaults 2`] = `
Array [
  "root-module-name",
  Object {
    "describe": "Name of the module that serves as the entry point to your application.",
    "type": "string",
  },
]
`;

exports[`argv config has development options and defaults 3`] = `
Array [
  "module-map-url",
  Object {
    "describe": "Remote module map URL for one-app-dev-cdn to proxy",
    "type": "string",
  },
]
`;

exports[`argv config has development options and defaults 4`] = `
Array [
  "use-host",
  Object {
    "default": false,
    "describe": "use req.headers.host instead of localhost for one-app-dev-cdn",
    "type": "boolean",
  },
]
`;

exports[`argv config has development options and defaults 5`] = `
Array [
  "log-format",
  Object {
    "choices": Array [
      "friendly",
      "verbose",
      "machine",
    ],
    "default": "friendly",
    "describe": "Presentation of log entries",
    "type": "string",
  },
]
`;

exports[`argv config has development options and defaults 6`] = `
Array [
  "log-level",
  Object {
    "choices": Array [
      "error",
      "warn",
      "log",
      "info",
    ],
    "default": "log",
    "describe": "Lowest level of log entries to show",
    "type": "string",
  },
]
`;

exports[`argv config has development options and defaults 7`] = `
Array [
  Array [
    Array [
      "root-module-name",
    ],
    "\`root-module-name\` is a required arg.",
  ],
]
`;

exports[`argv config has production options and defaults 1`] = `
Array [
  "log-format",
  Object {
    "choices": Array [
      "friendly",
      "verbose",
      "machine",
    ],
    "default": "machine",
    "describe": "Presentation of log entries",
    "type": "string",
  },
]
`;

exports[`argv config has production options and defaults 2`] = `
Array [
  "log-level",
  Object {
    "choices": Array [
      "error",
      "warn",
      "log",
      "info",
    ],
    "default": "info",
    "describe": "Lowest level of log entries to show",
    "type": "string",
  },
]
`;

exports[`argv config requires the \`module-map-url\` and \`root-module-name\` options if there is a local module map that is empty and the root module name env var is not set 1`] = `
Array [
  Array [
    Array [
      "module-map-url",
      "root-module-name",
    ],
    "Both \`root-module-name\` and \`module-map-url\` args are required if there are no locally served modules.",
  ],
]
`;

exports[`argv config requires the \`module-map-url\` but not the \`root-module-name\` option if there is a local module map that is empty and the root module name env var is set 1`] = `
Array [
  Array [
    Array [
      "module-map-url",
    ],
    "\`module-map-url\` is required if there are no locally served modules.",
  ],
]
`;

exports[`argv config requires the \`module-map-url\` option if there are no locally served modules 1`] = `
Array [
  Array [
    Array [
      "module-map-url",
      "root-module-name",
    ],
    "Both \`root-module-name\` and \`module-map-url\` args are required if there are no locally served modules.",
  ],
]
`;

exports[`argv config requires the \`module-map-url\` option if there is a local module map that is empty 1`] = `
Array [
  Array [
    Array [
      "module-map-url",
      "root-module-name",
    ],
    "Both \`root-module-name\` and \`module-map-url\` args are required if there are no locally served modules.",
  ],
]
`;

exports[`argv config throws if the \`root-module-name\` option is given while the root module name env var is also set 1`] = `
"Both the \`root-module-name\` argument and the \`ONE_CLIENT_ROOT_MODULE_NAME\` environment variable have been provided, but only one may be set at once.
"
`;
